--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
         "config.json" : "0.0.x",
         "log4js"      : "1.1.x",
         "socket.io"   : "^2.2.0",
+        "body-parser" : "^1.19.x",
+        "redis"       : "^2.8.0",
         "ssl-root-cas": "^1.2.4"
     },
     "engines"     : {
