Prepare to release v1.0.0

--- a/config.json
+++ b/config.json
@@ -2,8 +2,7 @@
     "port"   : 8181,
     "redis"  : {
         "host": "192.168.0.5",
-        "port": 6379,
-        "auth": ""
+        "port": 6379
     },
     "senders": [
         "fd5a4f7b-5c06-4057-8327-2fb425c70064"
