--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
     "name"        : "xeaf-notify",
-    "version"     : "0.0.1",
+    "version"     : "1.0.0",
     "private"     : false,
-    "license"     : "Apache 2.0",
+    "license"     : "Apache-2.0",
+    "repository"  : {
+        "type": "git",
+        "url" : "https://github.com/xeaf-net/xeaf-notify.git"
+    },
     "dependencies": {
         "http"        : "^0.0.0",
         "express"     : "^4.16.4",
         "config.json" : "0.0.x",
-        "log4js"      : "1.1.x",
+        "log4js"      : "^4.1.1",
         "socket.io"   : "^2.2.0",
         "body-parser" : "^1.19.x",
         "redis"       : "^2.8.0",
