Changed message delivery algorithm

--- a/config.json
+++ b/config.json
@@ -1,9 +1,11 @@
 {
     "port"   : 8181,
     "redis"  : {
-        "host": "192.168.0.5",
-        "port": 6379
+        "host"   : "192.168.0.5",
+        "port"   : 6379,
+        "expired": 86400
     },
+    "deliver": 10,
     "senders": [
         "fd5a4f7b-5c06-4057-8327-2fb425c70064"
     ]
