Trying to add SSL support

--- a/config.json
+++ b/config.json
@@ -1,5 +1,10 @@
 {
     "port"   : 8181,
+    "ssl"    : {
+        "key" : "",
+        "cert": "",
+        "ca"  : ""
+    },
     "redis"  : {
         "host"   : "192.168.0.5",
         "port"   : 6379,
