--- a/package.json
+++ b/package.json
@@ -1,29 +1,29 @@
 {
-    "name": "xeaf-notify",
-    "version": "1.0.3",
-    "private": false,
-    "license": "Apache-2.0",
-    "repository": {
+    "name"        : "xeaf-notify",
+    "version"     : "1.0.4",
+    "private"     : false,
+    "license"     : "Apache-2.0",
+    "repository"  : {
         "type": "git",
-        "url": "https://github.com/xeaf-net/xeaf-notify.git"
+        "url" : "https://github.com/xeaf-net/xeaf-notify.git"
     },
     "dependencies": {
-        "http": "^0.0.0",
-        "express": "^4.16.4",
-        "config.json": "0.0.x",
-        "log4js": "^4.1.1",
-        "socket.io": "^2.2.0",
-        "body-parser": "^1.19.x",
-        "redis": "^2.8.0",
-        "ssl-root-cas": "^1.2.4"
+        "http"        : "^0.0.0",
+        "express"     : "^4.17.1",
+        "config.json" : "0.0.x",
+        "log4js"      : "^6.1.0",
+        "socket.io"   : "^2.3.0",
+        "body-parser" : "^1.19.0",
+        "redis"       : "^2.8.0",
+        "ssl-root-cas": "^1.3.1"
     },
-    "engines": {
+    "engines"     : {
         "node": ">= 6.9.x"
     },
-    "scripts": {
+    "scripts"     : {
         "start": "node ./src/xeaf-notify.js"
     },
-    "files": [
+    "files"       : [
         "src/"
     ]
 }
